--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuración de la base de datos.\n",
+    "##  El contenido de ```DATABASE``` en el script ```settings.py```.\n",
     "\n",
     "Django siempre estará ligado a una base de datos desde su instalación.\n",
     "\n",
@@ -119,9 +119,25 @@
     "            ...\n",
     "            <dentificador n>:{<argumentos de configuración>},} \n",
     "```\n",
-    "La configuración de cada base de datos también corresponde a un objeto ```dict```ligado a un nombre específico. \n",
+    "La configuración de cada base de datos también corresponde a un objeto ```dict``` ligado a una clavee específica.\n",
     "\n",
-    "El identificador por defecto es ```default```. "
+    "### La configuración ```default```.\n",
+    "\n",
+    "La clave por defecto es ```default```. Siempre dene de existir una comnfiguración d bases de datos con esta clave."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "\n",
+    "```python\n",
+    " 'default': {\n",
+    "        'ENGINE': 'django.db.backends.sqlite3',\n",
+    "        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),\n",
+    "    }\n",
+    "````"
    ]
   },
   {
@@ -148,7 +164,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuración de las bases de datos del proyecto."
+    "## Ejemplo Ilustrativo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La base de datos de *SQLite*."
    ]
   },
   {
@@ -169,7 +192,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preparación del conector de MySQL."
+    "### La base de datos *MySQL*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preparación del conector de *MySQL*."
    ]
   },
   {
@@ -197,22 +227,17 @@
     "* Usuario: ```root```\n",
     "* Contraseña: ```0p3n5t4ck```\n",
     "* Host: ```localhost``` accesible exclusivamente desde la máquina virtual.\n",
-    "* Puerto: ```3306```\n",
-    "\n",
-    "El script ```src/12/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```."
+    "* Puerto: ```3306```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Configuración de ```settings.DATABASES```.\n",
+    "\n",
+    "El script ```src/12/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```.\n",
+    "\n",
     "``` python\n",
     "\n",
     "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
@@ -252,6 +277,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -275,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sincronizando la bases de datos.\n",
+    "## El subcomando ```migrate```.\n",
     "\n",
     "Al ejecutar ```manage.py```con el subcomando ```migrate``` se da de alta y sincronizar cada bases de datos indentificada con la clave correspondiente en el objeto ```DATABASES``` definido en ```settings.py```.\n",
     "\n",
