--- a/13_modelos_de_django.ipynb
+++ b/13_modelos_de_django.ipynb
@@ -40,9 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.db.models.Model*.\n",
+    "## La clase ```django.db.models.Model```.\n",
     "\n",
-    "La clase *django.db.models.Model* es la superclase a partir de la cual se pueden diseñar los modelos de *Django*."
+    "La clase ```django.db.models.Model``` es la superclase a partir de la cual se pueden diseñar los modelos de *Django*."
    ]
   },
   {
@@ -97,11 +97,11 @@
    "source": [
     "## Asignación de nombres de los campos de una tabla con respecto a los atributos de una clase.\n",
     "\n",
-    "Al crear una subclase de ```Model```, dicha clase se liga automáticamente con una tabla en la base de datos.\n",
+    "Al crear una subclase de ```django.db.models.Model```, dicha clase se liga automáticamente con una tabla en la base de datos.\n",
     "\n",
     "Es posible crear atributos que permitan ligarse con una columna de la tabla.\n",
     "\n",
-    "Al instanciar un objeto a partir de una subclase de ```Model``` se crea  un registro en la tabla cuyos atributos son los campos correspondientes."
+    "Al instanciar un objeto a partir de una subclase de ```django.db.models.Model``` se crea  un registro en la tabla cuyos atributos son los campos correspondientes."
    ]
   },
   {
@@ -172,7 +172,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sutituirá al archivo ```tutorial/main/models.py``` con el archivo ```src/13/models.py```."
+    "* La siguiente celda sutituirá al script ```tutorial/main/models.py``` con el script ```src/13/models.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas GNU/linux y MacOS X."
    ]
   },
   {
@@ -185,12 +192,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!copy src\\13\\models.py tutorial\\main\\models.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará el resultado de la sustitución en el script ```tutorial/main/models.py```."
    ]
   },
   {
@@ -208,7 +229,7 @@
    "source": [
     "## Inclusión de modelos en la configuración.\n",
     "\n",
-    "Para que un archivo *models.py* pueda ser incluido por *Django*, es necesario indicar su localización en la lista *INSTALLED_APPS* del archivo *settings.py* correspondiente como si se tratara de un módulo."
+    "Para que un archivo ```models.py``` pueda ser incluido por *Django*, es necesario indicar su localización en la lista ```INSTALLED_APPS``` del script ```settings.py``` correspondiente como si se tratara de un módulo."
    ]
   },
   {
@@ -216,7 +237,7 @@
    "metadata": {},
    "source": [
     "**Ejemplo:**\n",
-    "El archivo *src/13/settings.py* incluye la cadena *'main\"* en la lista *INSTALLED_APPS* de la siguiente forma:\n",
+    "El script *src/13/settings.py* incluye la cadena ```'main'``` en la lista ```INSTALLED_APPS``` de la siguiente forma:\n",
     "\n",
     "``` python\n",
     "INSTALLED_APPS = [\n",
@@ -239,12 +260,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!cp src/13/settings.py tutorial/tutorial/"
+    "* Para las plataformas GNU/Linux y MacOS X."
    ]
   },
   {
@@ -253,14 +272,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\13\\settings.py tutorial\\tutorial\\"
+    "!cp src/13/settings.py tutorial/tutorial/settings.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Lo cual se ve reflejado de la siguiente manera:"
+    "* Para las plataformas GNU/Linux y MacOS X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\13\\settings.py tutorial\\tutorial\\settings.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará el resultado de la sustitución en el script ```tutorial/tutorial/settings.py```."
    ]
   },
   {
@@ -276,13 +311,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conciliación de los modelos con la base de datos.\n",
+    "## El subcomando ```makemigrations```.\n",
     "\n",
-    "El comando ```manage.py makemigrations``` permite conciliar las estructuras de los modelos definidos con la estructura de tablas de la base de datos de *Django*.\n",
+    "El subcomando ```makemigrations``` de ```manage.py``` permite conciliar las estructuras de los modelos definidos con la estructura de tablas de la base de datos de *Django*.\n",
     "\n",
-    "Este comando creará diversos archivos de Python en el subdirectorio *migrations* de la aplicación.\n",
     "\n",
-    "Una vez conciliadas, los cambios se apicarán mendiante el comando ```manage.py migrate```."
+    "```\n",
+    "./manage.py makemigrations\n",
+    "```\n",
+    "o\n",
+    "```\n",
+    "python manage.py makemigrations\n",
+    "```\n",
+    "\n",
+    "Este comando creará diversos archivos de Python en el subdirectorio ```migrations``` de la aplicación.\n",
+    "\n",
+    "Una vez conciliadas, los cambios se apicarán meniante ```manage.py migrate```."
    ]
   },
   {
@@ -291,7 +335,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "Se realizará la conciliación del modelo definido en la aplicación *main* en el proyecto *tutorial*."
+    "Se realizará la conciliación del modelo definido en la aplicación ```main``` en el proyecto ```tutorial```."
    ]
   },
   {
@@ -311,7 +355,7 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py makemigrations"
+    "! python manage.py makemigrations"
    ]
   },
   {
@@ -322,14 +366,14 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py migrate --database=default"
+    "! python manage.py migrate --database=default"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Aún cuando se realizó la conciliación, *Django* no crea una nueva tabla, ya que antes debe de crearse al menos una instancia del modelo *Alumno*."
+    "* Aún cuando se realizó la conciliación, *Django* no crea una nueva tabla, ya que antes debe de crearse al menos una instancia del modelo ```Alumno``` definido en ```tutorial/main/models.py```."
    ]
   },
   {
@@ -354,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost//db_django"
+    "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost/db_django"
    ]
   },
   {
