--- a/20_contenido_estatico.ipynb
+++ b/20_contenido_estatico.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "*Django* es un servidor de aplicaciones web que permirte crear contenido de forma dinámica. Utilizarlo como un servidor web dedicado como lo son el servidor [*Apache*](https://httpd.apache.org/) y [*Nginx*](https://nginx.org) no sólo es ineficiente, sino que incluso podría representar un riesgo de seguridad.\n",
     "\n",
-    "Es posible consultar un pequeño tutorial sobre cómo publicar contenido estático desde un servidor web dedicado en https://docs.djangoproject.com/en/2.1/howto/static-files/deployment/#serving-static-files-from-a-dedicated-server."
+    "Es posible consultar un pequeño tutorial sobre cómo publicar contenido estático desde un servidor web dedicado en https://docs.djangoproject.com/en/2.2/howto/static-files/deployment/#serving-static-files-from-a-dedicated-server."
    ]
   },
   {
@@ -49,7 +49,7 @@
     "Durante el ciclo de vida de un proyecto de desarrollo de software es común y recomendable desplegar distintos entornos para ciertas etapas. Los más comunes son:\n",
     "\n",
     "* *Entorno de desarrollo*, el cual corresponde al conjunto de recursos utilizado por el equipo de desarrollo a lo largo de un proyecto.\n",
-    "* *Entorno de pruebas* el cual corresponde a los recursos utilizados para realizar las diversas pruebas y contrloes de calidad del producto de software.\n",
+    "* *Entorno de pruebas* el cual corresponde a los recursos utilizados para realizar las diversas pruebas y controles de calidad del producto de software.\n",
     "* *Entorno de producción* el entorno en el que el producto de software será publicado y utilizado por los usuarios del producto. \n"
    ]
   },
@@ -109,7 +109,7 @@
     "\n",
     "El argumento ```--noinput``` permite realizar la operación descrita sin que sea necesario interactuar con el usuario.\n",
     "\n",
-    "La referencia completa puede ser encontrada en https://docs.djangoproject.com/en/2.1/ref/contrib/staticfiles/#django-admin-collectstatic."
+    "La referencia completa puede ser encontrada en https://docs.djangoproject.com/en/2.2/ref/contrib/staticfiles/#django-admin-collectstatic."
    ]
   },
   {
@@ -177,7 +177,7 @@
     "\n",
     "La variable *settings.STATICFILES_STORAGE* permite definir el recurso en la nube en el cual se almacenará el contenido estático.\n",
     "\n",
-    "Es posible consultar un pequeño ejemplo de conexiones de almacenamiento para contenido estártico en https://docs.djangoproject.com/en/2.1/howto/static-files/deployment/#staticfiles-from-cdn."
+    "Es posible consultar un pequeño ejemplo de conexiones de almacenamiento para contenido estártico en https://docs.djangoproject.com/en/2.2/howto/static-files/deployment/#staticfiles-from-cdn."
    ]
   },
   {
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inclusión  de un direcotrio de imágenes en el directorio estático.\n",
+    "### Inclusión  de un directorio de imágenes en el directorio estático.\n",
     "\n",
     "El directorio *src/20/imagenes* contiene a la imagen *pythonista.png*.\n",
     "\n",
@@ -485,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp -r src/20/imagenes tutorial/api/static/"
+    "!cp -r src/20/imagenes tutorial/api/static/"
    ]
   },
   {
@@ -494,7 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%ls tutorial/api/static/imagenes"
+    "!dir tutorial/api/static/imagenes"
    ]
   },
   {
@@ -543,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/base.html tutorial/templates/"
+    "!cp src/20/base.html tutorial/templates/"
    ]
   },
   {
@@ -554,7 +554,7 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/templates/base.html"
+    "%pycat tutorial/templates/base.html"
    ]
   },
   {
@@ -570,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd tutorial/"
+    "%cd tutorial"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
