--- a/14_operaciones_basicas _con_modelos.ipynb
+++ b/14_operaciones_basicas _con_modelos.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "En este capítulo se estudiarán los métodos más simples de operación de modelos en una base de datos. \n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/topics/db/queries/"
+    "https://docs.djangoproject.com/en/2.2/topics/db/queries/"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "source": [
     "### Instanciamiento de un objeto a partir de un modelo.\n",
     "\n",
-    "Para instanciar un objeto a partir de un modelo es necesario importar la clase correspondiente, que por lo general se encuentra en el archivo *models.py* de la aplicación correspondiente.\n",
+    "Para instanciar un objeto a partir de un modelo es necesario importar la clase correspondiente, que por lo general se encuentra en el archivo ```models.py``` de la aplicación correspondiente.\n",
     "\n",
     "Es posible asignar los valores a los atributos del objeto instanciado al ingresarlos como argumentos.\n",
     "\n",
@@ -52,25 +52,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El atributo *save()*.\n",
+    "### El método ``save()``.\n",
     "\n",
-    "Cada objeto instanciado de un modelo cuenta con el atributo *save()* el cual permite actualizar  su estado dentro del registro correspondiente en la base de datos."
+    "Cada objeto instanciado de un modelo cuenta con el método ```save()```, el cual permite actualizar  su estado dentro del registro correspondiente en la base de datos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El atributo *delete()*.\n",
+    "### El método ```delete()```.\n",
     "\n",
-    "Cada objeto instanciado de un modelo cuenta con el atributo *delete()*, el cual permite eliminar el registro correspondiente en la base de datos."
+    "Cada objeto instanciado de un modelo cuenta con el atributo ```delete()```, el cual permite eliminar el registro correspondiente en la base de datos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Atributo de clase *django.db.Model.objects*.\n",
+    "## Atributo de clase ```django.db.Model.objects```.\n",
     "\n",
     "Este artibuto de clase permite gestionar las relaciones de tanto de los objetos instanciados del modelo como de sus registros correspondientes en una base de datos.\n",
     "\n",
@@ -84,11 +84,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métodos de *django.db.Model.objects*.\n",
+    "## Métodos de ```django.db.Model.objects```.\n",
     "\n",
-    "* *all()* va a traer un iterador que contiene a todos los objetos instanciados de la subclase de *django.db.Model*.\n",
-    "* *get()* va a traer a un objeto que cumpla con una expresión.\n",
-    "* *filter()* realiza búsquedas medainte expresiones lógicas."
+    "* ```all()``` va a traer un iterador que contiene a todos los objetos instanciados de la subclase de ```django.db.Model```.\n",
+    "* ```get()``` va a traer a un objeto que cumpla con una expresión.\n",
+    "* ```filter()``` realiza búsquedas medainte expresiones lógicas."
    ]
   },
   {
@@ -129,11 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/pythonista/py231/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -158,9 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/bin/sh: copy: command not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "!copy ..\\src\\14\\alumnos.json alumnos.json"
    ]
@@ -181,22 +197,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31;1mCommandError: 'api' conflicts with the name of an existing Python module and cannot be used as an app name. Please try another name.\r\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py startapp api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "api\r\n",
+      "├── admin.py\r\n",
+      "├── apps.py\r\n",
+      "├── __init__.py\r\n",
+      "├── migrations\r\n",
+      "│   ├── __init__.py\r\n",
+      "│   └── __pycache__\r\n",
+      "│       └── __init__.cpython-36.pyc\r\n",
+      "├── models.py\r\n",
+      "├── __pycache__\r\n",
+      "│   ├── admin.cpython-36.pyc\r\n",
+      "│   ├── __init__.cpython-36.pyc\r\n",
+      "│   └── models.cpython-36.pyc\r\n",
+      "├── tests.py\r\n",
+      "├── urls.py\r\n",
+      "└── views.py\r\n",
+      "\r\n",
+      "3 directories, 12 files\r\n"
+     ]
+    }
+   ],
    "source": [
     "! tree api"
    ]
@@ -225,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -236,16 +286,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/bin/sh: copy: command not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "!copy ..\\src\\14\\settings.py tutorial\\settings.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -276,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -287,20 +345,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%copy` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "%copy ..\\src\\14\\tutorial_urls.py tutorial\\urls.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat tutorial\\urls.py"
+    "%pycat tutorial/urls.py"
    ]
   },
   {
@@ -320,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -340,9 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: no such file, variable, URL, history range or macro\n"
+     ]
+    }
+   ],
    "source": [
     "%pycat api\\urls.py"
    ]
@@ -372,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -392,11 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat api\\models.py"
+    "%pycat api/models.py"
    ]
   },
   {
@@ -441,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -452,16 +526,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/bin/sh: copy: command not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "!copy ..\\src\\14\\views.py api\\views.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,22 +559,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36;1mMigrations for 'api':\u001b[0m\r\n",
+      "  \u001b[1mapi/migrations/0001_initial.py\u001b[0m\r\n",
+      "    - Create model Alumno\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py makemigrations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36;1mOperations to perform:\u001b[0m\r\n",
+      "\u001b[1m  Apply all migrations: \u001b[0madmin, api, auth, contenttypes, main, sessions\r\n",
+      "\u001b[36;1mRunning migrations:\u001b[0m\r\n",
+      "  Applying api.0001_initial...\u001b[32;1m OK\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py migrate"
    ]
@@ -514,7 +617,23 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing system checks...\n",
+      "\n",
+      "System check identified no issues (0 silenced).\n",
+      "May 31, 2019 - 19:34:54\n",
+      "Django version 2.1.1, using settings 'tutorial.settings'\n",
+      "Starting development server at http://0.0.0.0:5000/\n",
+      "Quit the server with CONTROL-C.\n",
+      "[31/May/2019 19:34:56] \u001b[m\"GET /api/carga HTTP/1.1\" 200 780\u001b[0m\n",
+      "[31/May/2019 19:35:02] \u001b[m\"GET /api/ HTTP/1.1\" 200 782\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! ./manage.py runserver 0.0.0.0:5000"
    ]
@@ -546,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,9 +674,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: root@db_django'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql mysql+mysqlconnector://root:0p3n5t4ck@localhost/db_django"
    ]
@@ -571,9 +701,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/db_django\n",
+      "12 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>Tables_in_db_django</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>api_alumno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>auth_group</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>auth_group_permissions</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>auth_permission</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>auth_user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>auth_user_groups</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>auth_user_user_permissions</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>django_admin_log</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>django_content_type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>django_migrations</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>django_session</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>main_alumno</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('api_alumno',),\n",
+       " ('auth_group',),\n",
+       " ('auth_group_permissions',),\n",
+       " ('auth_permission',),\n",
+       " ('auth_user',),\n",
+       " ('auth_user_groups',),\n",
+       " ('auth_user_user_permissions',),\n",
+       " ('django_admin_log',),\n",
+       " ('django_content_type',),\n",
+       " ('django_migrations',),\n",
+       " ('django_session',),\n",
+       " ('main_alumno',)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "show tables;"
@@ -588,9 +791,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/db_django\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>numero_de_cuenta</th>\n",
+       "        <th>nombre</th>\n",
+       "        <th>primer_apellido</th>\n",
+       "        <th>segundo_apellido</th>\n",
+       "        <th>carrera</th>\n",
+       "        <th>semestre</th>\n",
+       "        <th>promedio</th>\n",
+       "        <th>al_corriente</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>1221</td>\n",
+       "        <td>Pedro</td>\n",
+       "        <td>Solis</td>\n",
+       "        <td>Cabañas</td>\n",
+       "        <td>Arquitectura</td>\n",
+       "        <td>3</td>\n",
+       "        <td>7.8</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>1222</td>\n",
+       "        <td>Yolanda</td>\n",
+       "        <td>Jiménez</td>\n",
+       "        <td>Lerdo</td>\n",
+       "        <td>Actuaría</td>\n",
+       "        <td>3</td>\n",
+       "        <td>6.0</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>1223</td>\n",
+       "        <td>Juan</td>\n",
+       "        <td>Ramos</td>\n",
+       "        <td>Breña</td>\n",
+       "        <td>Sistemas</td>\n",
+       "        <td>9</td>\n",
+       "        <td>8.6</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>1224</td>\n",
+       "        <td>Mayra Jimena</td>\n",
+       "        <td>Cervantes</td>\n",
+       "        <td>Lisama</td>\n",
+       "        <td>Derecho</td>\n",
+       "        <td>12</td>\n",
+       "        <td>9.2</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 1221, 'Pedro', 'Solis', 'Cabañas', 'Arquitectura', 3, 7.8, 0),\n",
+       " (2, 1222, 'Yolanda', 'Jiménez', 'Lerdo', 'Actuaría', 3, 6.0, 0),\n",
+       " (3, 1223, 'Juan', 'Ramos', 'Breña', 'Sistemas', 9, 8.6, 1),\n",
+       " (4, 1224, 'Mayra Jimena', 'Cervantes', 'Lisama', 'Derecho', 12, 9.2, 1)]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql select * from api_alumno;"
    ]
@@ -620,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
