--- a/19_lenguaje_de_plantillas_de_django.ipynb
+++ b/19_lenguaje_de_plantillas_de_django.ipynb
@@ -34,7 +34,6 @@
     "* Delimitar bloques.\n",
     "* Ejecutar declaraciones condicionales.\n",
     "* Realizar ciclos.\n",
-    "* Delimitar bloques de texto.\n",
     "* Heredar de contenidos.\n",
     "\n",
     "## Operaciones que no puede realizar el *DTL*.\n",
@@ -44,7 +43,7 @@
     "* Definir funciones o macros.\n",
     "* Acceder a elementos de una colección mediante la sintaxis de indices usando corchetes.\n",
     "\n",
-    "Referencia:https://docs.djangoproject.com/en/2.1/ref/templates/builtins/"
+    "Referencia:https://docs.djangoproject.com/en/2.2/ref/templates/builtins/"
    ]
   },
   {
@@ -75,14 +74,65 @@
     "* Las expresiones permiten \"concatentar\" filtros, por lo que la salida del filtro de la izquierda es la entrada del filtro de la derecha.\n",
     "* Los filtros pueden incluir argumentos.\n",
     "\n",
-    "Los filtros dsiponibles pueden ser consultado en https://docs.djangoproject.com/en/2.1/ref/templates/builtins/#built-in-filter-reference."
+    "Los filtros dsiponibles pueden ser consultado en https://docs.djangoproject.com/en/2.2/ref/templates/builtins/#built-in-filter-reference."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La declaración *filter*.\n",
+    "## Expresiones y filtros.\n",
+    "\n",
+    "Las expresiones se definen con la siguiente sintaxis:\n",
+    "\n",
+    "```\n",
+    "{{ <expresión> }}\n",
+    "```\n",
+    "\n",
+    "Una expresión debe de implicar al menos un elemento que será convertido en una cadena de caracteres. Este elemento puede ser:\n",
+    "\n",
+    "* Un objeto de Python ligado a un nombre.\n",
+    "* Un atributo de un objeto de Python.\n",
+    "* El resultado de la ejecuciónde un método de un objeto de Python.\n",
+    "\n",
+    "### Filtros.\n",
+    "\n",
+    "*DTL* no soporta los operadores de Python para interpretar expresiones, sino que utiliza una serie de filtros mediante la siguiente sintaxis.\n",
+    "\n",
+    "```\n",
+    "{{ <elemento>|<filtro 1>:\"<argumento>\"|<filtro 2>:\"<argumento>\"| ... |<filtro n>:\"<argumento>\" \n",
+    "```\n",
+    "* Las expresiones permiten \"concatentar\" filtros, por lo que la salida del filtro de la izquierda es la entrada del filtro de la derecha.\n",
+    "* Los filtros pueden incluir argumentos.\n",
+    "\n",
+    "Los filtros dsiponibles pueden ser consultado en https://docs.djangoproject.com/en/2.2/ref/templates/builtins/#built-in-filter-reference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Asignación de nombres con ```{% with %}```.\n",
+    "\n",
+    "La declaración *with* se utiliza dentro de declaraciones y permite ligar a un elemento específico con un nombre. El ámbito de estos nombres está limitado al bloque que lo contiene.\n",
+    "\n",
+    "```\n",
+    "{% with <nombre>=<elemento> %}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Declaraciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La declaración ```{% filter %}``` ... ```{%endfilter%}```.\n",
     "\n",
     "Esta declaración aplica una serie de filtros al texto delimitado.\n",
     "\n",
@@ -99,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La declaración *comment*.\n",
+    "### La declaración ```{%comment%}``` ...  ```{%endcomment%}```\n",
     "\n",
     "El bloque de texto delimitado por esta Ddeclaración será ignorado.\n",
     "\n",
@@ -116,20 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Asignación de nombres con *with*.\n",
-    "\n",
-    "La declaración *with* se utiliza dentro de declaraciones y permite ligar a un elemento específico con un nombre. El ámbito de estos nombres está limitado al bloque que lo contiene.\n",
-    "\n",
-    "```\n",
-    "{% with <nombre>=<elemento> %}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## La declaración con *if*.\n",
+    "### La declaración con ```{% if ...%}``` ... ```{% endif %}``` .\n",
     "\n",
     "Esta declaración permite evaluar declaraciones lógicas similares a las usadas en Python.\n",
     "\n",
@@ -141,7 +178,7 @@
     "{% endif %}\n",
     "```\n",
     "\n",
-    "###  Uso de _else_ y _elif_ en un condicional .\n",
+    "####  Uso de ```{%elif %}``` y ```{% else %}``` en un condicional .\n",
     "\n",
     "También es posible evaluar más de una expresión con la siguiente sintaxis:\n",
     "\n",
@@ -170,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iteraciones con la declaración *for*.\n",
+    "### Iteraciones con la declaración ```{% for ... in ... %}``` ... ```{% endfor %}```.\n",
     "\n",
     "La evaluación de ciclos con *for* se comportan de forma idéntica a Python, pero con la siguiente sintaxis:\n",
     "\n",
@@ -182,7 +219,7 @@
     "{% endfor %}\n",
     "```\n",
     "\n",
-    "Cabe hacer notar que al igua que en Python, es posible hacer iteraciones que inclutan  varios elementos, siempre que cada elemento del iterador contenga exactamente el mismo número de elementos internos que los nombres declarados.\n",
+    "Cabe hacer notar que al igual que en Python, es posible hacer iteraciones que incluyan  varios elementos, siempre que cada elemento del iterador contenga exactamente el mismo número de elementos internos que los nombres declarados.\n",
     "\n",
     "```\n",
     "{% for <nombre de elemento 1>,<nombre de elemento 2>, ...  <nombre de elemento n>,    in <iterable> %}\n",
@@ -197,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La estructura *for* ... *empty*.\n",
+    "#### La estructura  ```{%empty%}```.\n",
     "\n",
     "En este caso es posible delimitar una proción de texto y código que se ejecutará en caso de que el iterador esté vacío.\n",
     "\n",
@@ -218,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La declaración *cycle*.\n",
+    "#### La estructura ```{%cycle ...%}```.\n",
     "\n",
     "Esta declaración permite definir una secuencia de textos encerrados por comillas o apóstrofes y separados por espacios, de tal forma que regrese cada uno de los elementos dentro de una iteración. Si la secuencia de elementos termina, vuelve a comenzar.\n",
     "\n",
@@ -230,7 +267,7 @@
     "{% endfor %}\n",
     "```\n",
     "\n",
-    "### La estructura *cycle* ...  *as*.\n",
+    "#### La estructura ```{%cycle... as...%}```.\n",
     "\n",
     "Esta estructura permite asignarle un nombre a cada elemento del ciclo de forma similar a *with*.\n",
     "\n",
@@ -283,7 +320,7 @@
     "Se crearán dos URLs las cuales desplegarán la información de todos los alumnos dados de alta mediante la aplicación en *api*.\n",
     "\n",
     "* La primera URL hará un despliegue simple de la información como listados.\n",
-    "* La segunda URl desplegará la información indicando si el usuario es válido a partir de el valor del atributo *al_corriente* de cada objeto.\n",
+    "* La segunda URL desplegará la información indicando si el usuario es válido a partir de el valor del atributo *al_corriente* de cada objeto.\n",
     "\n",
     "### Definición de URLs.\n",
     "\n",
@@ -321,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/19/urls.py tutorial/api/urls.py"
+    "!cp src/19/urls.py tutorial/api/urls.py"
    ]
   },
   {
@@ -330,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/api/urls.py"
+    "%pycat tutorial/api/urls.py"
    ]
   },
   {
@@ -393,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/api/template_views.py"
+    "%pycat tutorial/api/template_views.py"
    ]
   },
   {
@@ -466,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/templates/base.html"
+    "%pycat tutorial/templates/base.html"
    ]
   },
   {
@@ -617,7 +654,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -660,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
