--- a/21_gestion_de_formularios.ipynb
+++ b/21_gestion_de_formularios.ipynb
@@ -32,7 +32,7 @@
     "Las formularios en HTML se definen mediante la etiqueta *&lt;form&gt;* de la siguiente forma:\n",
     "\n",
     "```\n",
-    "<form action=\"una acción\" method=\"método\">\n",
+    "<form action=\"una acción\" method=\"<método\">\n",
     "...\n",
     "...\n",
     "</form>\n",
@@ -51,9 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Elementos de una forma en *Django*.\n",
+    "## Elementos de un formulario en *Django*.\n",
     "\n",
-    "Django cuenta con un manejo muy avanzado de formas definiendo los siguientes elementos.\n",
+    "Django cuenta con un manejo muy avanzado de formularios definiendo los siguientes elementos.\n",
     " \n",
     "* Formularios.\n",
     "* Campos (field).\n",
