--- a/22_seguridad_y_autenticacion_basicas.ipynb
+++ b/22_seguridad_y_autenticacion_basicas.ipynb
@@ -18,7 +18,9 @@
     "* Autenticación básica.\n",
     "* Gestión de sesiones.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/topics/auth/"
+    "La documentación correspondiente puede ser consultada en https://docs.djangoproject.com/en/2.2/topics/auth/\n",
+    "\n",
+    "**Nota:** Los alcances de este curso sólo cubren los temas de gestión básica de usuarios y autenticación simple."
    ]
   },
   {
@@ -221,7 +223,7 @@
     "urlpatterns = [path('admin/', admin.site.urls), \n",
     "               path('main/', include('main.urls')),\n",
     "               path('api/', include('api.urls')),\n",
-    "               path('usuarios/', include('django.contrib.auth.urls')),\n",
+    "               path('accounts/', include('django.contrib.auth.urls')),\n",
     "              ]\n",
     "```"
    ]
@@ -292,19 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘tutorial/templates/registration’: File exists\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%mkdir tutorial/templates/registration"
    ]
@@ -380,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,14 +432,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Se iniciará el servidor."
+    "* Se iniciará el servidor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/pythonista/py231/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial/"
    ]
@@ -463,17 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!./manage.py runserver 0.0.0.0:5000"
    ]
